--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [                                       	# Kinda boilerplate. Used
 	"Programming Language :: Python :: 3",          # Tweak this to match your project
 	"Development Status :: 1 - Planning",               # https://pypi.org/classifiers/
 	"Environment :: Console",
-	"License :: OSI Approved :: GNU Affero General Public License v3",
+	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	"Operating System :: OS Independent",
 	"Topic :: Utilities"
 ]
