--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [                                       	# Kinda boilerplate. Used
 ]
 
 [project.scripts]                               # The entrypoint for CLI app (if needed)
-fet = "fetchy_cli.fetchy:fetchy"               	# SYNTAX: <commandlet> = "folder.file:function"
+fet = "fetchy_cli.fetchy:cli"               	# SYNTAX: <commandlet> = "folder.file:function"
                                                 # def main in __main__ and place in if name check
 [project.urls]
 "Homepage" = "https://github.com/espehon/fetchy-cli"              # Boilerplate links to GitHub repo
