--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"               # Boilerplate
 
 [project]
 name = "fetchy-cli"                              # Your pip install <name> (must be unique)
-version = "0.1.0"                               # Must be manually updated here with every change
+version = "0.2.0"                               # Must be manually updated here with every change
 authors = [
 	{ name="espehon", email="espehon@gmail.com" },      # Email is optional (as array?)
 ]
@@ -20,7 +20,7 @@ dependencies = [
 
 classifiers = [                                       	# Kinda boilerplate. Used as hashtags really
 	"Programming Language :: Python :: 3",          # Tweak this to match your project
-	"Development Status :: 1 - Planning",               # https://pypi.org/classifiers/
+	"Development Status :: 4 - Beta",               # https://pypi.org/classifiers/
 	"Environment :: Console",
 	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	"Operating System :: OS Independent",
