--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 
 classifiers = [                                       	# Kinda boilerplate. Used as hashtags really
 	"Programming Language :: Python :: 3",          # Tweak this to match your project
-	"Development Status :: 4 - Beta",               # https://pypi.org/classifiers/
+	"Development Status :: 5 - Production/Stable",               # https://pypi.org/classifiers/
 	"Environment :: Console",
 	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	"Operating System :: OS Independent",
