more toml PEP 639 eidts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 description = "Fetch strings from your system rather than your own memory!"               # Header on PyPI (above readme)
 readme = "README.md"                               # Boilerplate and will be added to the PyPI page
 license = "GPL-3.0-or-later"
+license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
 requires-python = ">=3.8"                            # Python version
 dependencies = [
 	"copykitten >= 1.2.0" 
